--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,56 @@
 
 body {
     font-family: sans-serif;
+    background-color: #000;
+    padding: 2rem;
 }
 
-header,
 section,
 footer {
     padding: 2rem;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 100px;
+    border: 1px solid rgba(254, 254, 254, 0.25);
+    padding: .5rem .5rem .5rem 2rem;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: .75rem;
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: #fff;
+}
+
+nav {
+    display: flex;
+    gap: .5rem;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    padding: .75rem 0;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    border: 1px solid rgba(254, 254, 254, 0.25);
+    font-size: 1.25rem;
+    width: 200px;
+    text-align: center;
+    font-weight: 400;
+}
+
+nav a:last-of-type {
+    background-color: #fff;
+    color: #000;
 }
