--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-/* Global Styles */
-
 :root {
     font-size: 16px;
 }
@@ -14,6 +12,11 @@ body {
     font-family: sans-serif;
     background-color: #000;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 section,
@@ -28,8 +31,8 @@ header {
     border-radius: 100px;
     border: 1px solid rgba(254, 254, 254, 0.25);
     padding: .5rem .5rem .5rem 2rem;
-    max-width: 1440px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .logo {
@@ -61,7 +64,35 @@ nav a {
     font-weight: 400;
 }
 
+nav a:hover {
+    background-color: #fff;
+    color: #000;
+}
+
 nav a:last-of-type {
     background-color: #fff;
     color: #000;
+}
+
+.section-intro {
+    background-image: url(../images/hero-img.png);
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    min-height: 997px;
+    position: relative;
+}
+
+.steps-svg {
+    position: absolute;
+    top: 2rem;
+    left: 0;
+}
+
+.hero-cta-card {
+    position: absolute;
+    top: 6rem;
+    right: 0;
+    width: 415px;
+    backdrop-filter: blur(7.5px);
 }
