--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('/assets/fonts/urbanist/urbanist.css');
+
 :root {
     font-size: 16px;
 }
@@ -9,7 +11,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: Urbanist, sans-serif;
     background-color: #000;
     padding: 2rem;
     display: flex;
