--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('/assets/fonts/urbanist/urbanist.css');
+@import url('../fonts/urbanist/urbanist.css');
 
 :root {
     font-size: 16px;
