--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,36 @@ nav a:last-of-type {
     width: 415px;
     backdrop-filter: blur(7.5px);
 }
+
+.hero-headline-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    max-width: 1024px;
+}
+
+h1 {
+    color: #FEFEFE;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+    font-size: 96px;
+    font-weight: 400;
+}
+
+.sub-headline-wrapper {
+    padding: 6rem 0;
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #000;
+    padding: 1rem 2rem;
+    border-radius: 100px;
+    font-size: 1.25rem;
+    font-weight: 400;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    width: fit-content;
+    font-size: 18px
+}
