--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,19 @@ h1 {
 
 .sub-headline-wrapper {
     padding: 6rem 0;
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+
+.sub-headline-wrapper p {
+    color: #FEFEFE;
+    font-weight: 400;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
 }
 
 .btn-white {
@@ -127,7 +140,14 @@ h1 {
     text-decoration: none;
     display: flex;
     align-items: center;
-    gap: .5rem;
+    justify-content: center;
+    text-align: center;
     width: fit-content;
-    font-size: 18px
+    font-size: 18px;
+    min-width: 184px;
+}
+
+.star-img {
+    margin-right: 1rem;
+    margin-left: 6rem;
 }
