--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ h1 {
 }
 
 .sub-headline-wrapper {
-    padding: 6rem 0;
+    padding: 5rem 0;
     display: flex;
     gap: .5rem;
     align-items: center;
@@ -127,6 +127,7 @@ h1 {
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+    max-width: 600px;
     /* 162.5% */
 }
 
