css update, image update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ nav a:last-of-type {
 }
 
 .section-intro {
-    background-image: url(../images/hero-img.png);
+    background-image: url(../images/hero-img.webp);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
